# learn-ml

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt  shell.nix
libraries/: README.md  jax.ipynb  jax.py  pytorch.ipynb
nlp/: nlp.ipynb  pytorch-nlp.ipynb
rl/: Practice.ipynb  cartpole.ipynb  gridworld.py
rl/baselines/: dqn-jax.py  dqn.py  jax.py  sac.py  td3.py
rl/baselines/QLearning/: agents.py  basic-policies.py  benchmark.py
rl/cartpole/: dqn.ipynb  dqn.py
rl/frozenlake/: agents.py  base.py
rl/jax/: dqn.py  linear_regression.py
