[project]
name = "learn-ml"
version = "0.1.0"
description = "Practice ML Algorithms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clearml>=1.18.0",
    "datasets>=3.6.0",
    "equinox>=0.12.2",
    "flax>=0.10.6",
    "gymnasium[all]>=1.1.1",
    "jax>=0.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]
